--- a/src/components/layout/main.module.css
+++ b/src/components/layout/main.module.css
@@ -3,7 +3,17 @@
   padding: 20px;
   width: 50%;
   padding-top: 100px;
+  padding-bottom: 100px;
   margin: 0 auto;
+}
+.main .content {
+  width: 100%;
+  height: auto;
+  min-height: 930px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media only screen and (max-width: 600px) {
